--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "2.15.4",
     "redux-persist": "^6.0.0",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
