--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dropdown-menu": "^0.1.1",
+    "entities": "^6.0.1",
     "firebase": "^12.0.0",
     "lucide-react": "^0.525.0",
+    "marked": "^16.2.1",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
